2002-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableDashArray::operator=): Added missing
 	assignment operator (fixes a bug).
	(DrawableDashArray::DrawableDashArray): Added missing copy
 	constructor (fixes a bug).

	* lib/Image.cpp (oilPaint): Changed argument type from unsigned
 	int to double.
	(chromaBluePrimary): Changed argument type from float to double.
	(chromaGreenPrimary): Changed argument type from float to double.
	(chromaRedPrimary): Changed argument type from float to double.
	(chromaWhitePoint): Changed argument type from float to double.
	(getConstPixels): Changed argument type of x_ & _y from 'int' to
 	'unsigned int'.
	(getPixels): Changed argument type of x_ & _y from 'int' to
 	'unsigned int'.

2002-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (debug): Added method to set ImageMagick debug
 	flag so that it prints debugging information while it runs.

2002-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp: Fixed a bunch of bugs related to
 	DrawableCompositeImage, DrawableFont, and inconsistencies
 	discovered by Gimpel lint.

2002-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (draw): Properly delimit individual drawing
 	commands so that MVG output is correct.

2002-03-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableViewbox): MVG syntax wasn't correct.

	* lib/Image.cpp (draw): Fix algorithm used to append newlines to
 	MVG commands so that draw() may be invoked multiple times while
 	still producing valid MVG.

2002-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableViewbox): New class to allow setting
 	the MVG output size.

2002-03-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (print): Changed "mpr:" to "mpri:" in order to
 	*finally* get DrawableCompositeImage to work as intended.
