@@ -4,6 +4,13 @@
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
+2002-04-09  Dom Lachowicz    &lt;cinamod@hotmail.com&gt;
+
+<UL>
+  <LI> lib/Image.cpp (Image::ping): Added PingBlob function
+
+</UL>
+<p>
 2002-04-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
