@@ -1,3 +1,7 @@
+2002-04-09  Dom Lachowicz    <cinamod@hotmail.com>
+
+	* lib/Image.cpp (Image::ping): Added PingBlob function
+	
 2002-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Drawable.cpp (DrawableDashArray::operator=): Added missing
